--- a/meter/windows/aclog.vcproj
+++ b/meter/windows/aclog.vcproj
@@ -62,6 +62,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				LinkIncremental="2"
+				AdditionalLibraryDirectories="C:\daten\boost\boost_1_42_0\lib"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="1"
